[BUGFIX #55129956] Truncates project title text on coursemap overlay

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -1548,7 +1548,7 @@ a.table--heading {
 
 // Wraps .matrix--overlay-header-title & .matrix--overlay-header-subtitle
 .matrix--overlay-header-wrapper {
-  width: 50.5rem;
+  width: 46rem;
   overflow: hidden;
 }
 
